--- a/SuperMario/Client/Client.vcxproj
+++ b/SuperMario/Client/Client.vcxproj
@@ -134,15 +134,29 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="yaApplication.h" />
+    <ClInclude Include="yaComponent.h" />
+    <ClInclude Include="yaEntity.h" />
+    <ClInclude Include="yaGameObject.h" />
     <ClInclude Include="yaInput.h" />
+    <ClInclude Include="yaLayer.h" />
     <ClInclude Include="yaMath.h" />
+    <ClInclude Include="yaScene.h" />
+    <ClInclude Include="yaSpriteRenderer.h" />
     <ClInclude Include="yaTime.h" />
+    <ClInclude Include="yaTransform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="yaApplication.cpp" />
+    <ClCompile Include="yaComponent.cpp" />
+    <ClCompile Include="yaEntity.cpp" />
+    <ClCompile Include="yaGameObject.cpp" />
     <ClCompile Include="yaInput.cpp" />
+    <ClCompile Include="yaLayer.cpp" />
+    <ClCompile Include="yaScene.cpp" />
+    <ClCompile Include="yaSpriteRenderer.cpp" />
     <ClCompile Include="yaTime.cpp" />
+    <ClCompile Include="yaTransform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Client.rc" />
