--- a/SuperMario/Client/Client.vcxproj
+++ b/SuperMario/Client/Client.vcxproj
@@ -130,6 +130,8 @@
   <ItemGroup>
     <ClInclude Include="Client.h" />
     <ClInclude Include="Commoninclude.h" />
+    <ClInclude Include="EHObject.h" />
+    <ClInclude Include="yaSceneMgr.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -140,12 +142,15 @@
     <ClInclude Include="yaInput.h" />
     <ClInclude Include="yaLayer.h" />
     <ClInclude Include="yaMath.h" />
+    <ClInclude Include="yaPlayer.h" />
     <ClInclude Include="yaScene.h" />
     <ClInclude Include="yaSpriteRenderer.h" />
     <ClInclude Include="yaTime.h" />
+    <ClInclude Include="yaTitleScene.h" />
     <ClInclude Include="yaTransform.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="yaSceneMgr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="yaApplication.cpp" />
     <ClCompile Include="yaComponent.cpp" />
@@ -153,9 +158,11 @@
     <ClCompile Include="yaGameObject.cpp" />
     <ClCompile Include="yaInput.cpp" />
     <ClCompile Include="yaLayer.cpp" />
+    <ClCompile Include="yaPlayer.cpp" />
     <ClCompile Include="yaScene.cpp" />
     <ClCompile Include="yaSpriteRenderer.cpp" />
     <ClCompile Include="yaTime.cpp" />
+    <ClCompile Include="yaTitleScene.cpp" />
     <ClCompile Include="yaTransform.cpp" />
   </ItemGroup>
   <ItemGroup>
